# embed-generator

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  go.work  go.work.sum  tygo.yaml
.github/: FUNDING.yml
.github/workflows/: docker-push.yaml  docker.yaml  docker.yml  release.yaml  release.yml
backend/: .gitignore  Cargo.toml  build.rs  crosscompile.sh  migrate.py  transfer.py
backend/src/: config.rs  main.rs  tokens.rs  util.rs
backend/src/api/: mod.rs  response.rs
backend/src/api/middlewares/: auth.rs  guild.rs  mod.rs
backend/src/api/routes/: auth_exchange.rs  auth_redirect.rs  channel_message_ids_get.rs  guild_channel_history_get.rs  guild_channel_list.rs  guild_channel_message_list.rs  guild_emoji_list.rs  guild_get.rs  guild_list.rs  guild_role_list.rs  guild_sticker_list.rs  links.rs  message_create.rs  message_delete.rs  message_get.rs  message_list.rs  message_send.rs  message_update.rs  mod.rs  serve_frontend.rs  shared_message_get.rs  user_get_me.rs
backend/src/api/wire/: auth.rs  guild.rs  message.rs  mod.rs  shared_message.rs  user.rs
backend/src/bot/: cache.rs  emojis.rs  message.rs  mod.rs  permissions.rs  webhooks.rs
backend/src/bot/commands/: embed.rs  format.rs  help.rs  image.rs  invite.rs  message.rs  message_json_direct.rs  message_restore_direct.rs  mod.rs  webhook.rs  website.rs
backend/src/db/: _redis.rs  mod.rs  mongo.rs
backend/src/db/models/: channel_message.rs  channel_messages.rs  guilds_with_access.rs  message.rs  mod.rs  shared_message.rs  user.rs
docs/: docusaurus.config.js  package.json
docs/contents/: faq.md  intro.md
embedg-app/: embed.go  go.mod  index.html  noembed.go  package-lock.json  package.go  package.json  tailwind.config.js  vite.config.ts
embedg-app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
embedg-next/: package.json
embedg-server/: .gitignore  .goreleaser.yml  docker-compose.yaml  go.mod  go.sum  main.go  sqlc.yaml
embedg-server/actions/: data.go  variables.go
embedg-server/admin/: cmd.go  impersonate.go
embedg-server/api/: api.go  managers.go  routes.go  server.go  stores.go
embedg-server/bot/: actions.go  bot.go  commands.go  components.go  entitlements.go  listeners.go  state.go  util.go
embedg-server/buildinfo/: buildinfo.go
embedg-server/config/: config.go  defaults.go
embedg-server/custom_bots/: bot.go  manager.go
embedg-server/embedg/: bot.go  commands.go  events.go  helpers.go  util.go
embedg-server/migrate/: cmd.go  logger.go  migrate.go
embedg-server/model/: kv.go  plan.go
embedg-server/scheduled_messages/: cron.go  (+1 more)
embedg-service/: .gitignore  go.mod  go.sum  main.go  sqlc.yaml
embedg-site/: .gitignore  docusaurus.config.js  docusaurus.config.ts  embed.go  go.mod  noembed.go  package.go  package.json  tailwind.config.js
frontend/: package-lock.json  package.json  tailwind.config.js
(+712 files in other folders)
