[package]
name = "embed-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"] }
actix-web = "4.0.1"
twilight-gateway = { version = "0.11.0", git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
twilight-http = { version = "0.11.0", git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
twilight-http-ratelimiting = { version = "0.11.0", git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
twilight-model = { version = "0.11.0", git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
twilight-cache-inmemory = { version = "0.11.0", git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
twilight-util = { version = "0.11.0", features = ["builder"], git = "https://github.com/merlinfuchs/twilight", branch = "v9" }
lazy_static = "1.4.0"
rust-embed = { version = "6.4.0", optional = true }
mime = "0.3.16"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4.17"
actix-cors = { version = "0.6.1", optional = true }
futures-util = "0.3.21"
percent-encoding = "2.1.0"
awc = { version = "3.0.0", features = ["rustls"] }
jsonwebtoken = "8.1.0"
thiserror = "1.0.31"
redis = "0.21.5"
mongodb = "2.2.1"
deadpool-redis = "0.10.2"
serde_json = "1.0.81"
once_cell = "1.12.0"
nanoid = "0.4.0"
regex = "1.5.6"
dashmap = "5.3.4"

[features]
default = ["frontend"]
cors = ["dep:actix-cors"]
frontend = ["dep:rust-embed"]
