[package]
name = "embed-generator"
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"] }
actix-web = "4.0.1"
twilight-gateway = "0.13"
twilight-http = "0.13"
twilight-http-ratelimiting = "0.13"
twilight-model = "0.13"
twilight-cache-inmemory = { version = "0.13", features = ["permission-calculator"] }
twilight-util = { version = "0.13", features = ["builder", "permission-calculator"] }
lazy_static = "1.4.0"
rust-embed = { version = "6.4.0", optional = true }
mime = "0.3.16"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4.17"
actix-cors = { version = "0.6.1", optional = true }
futures-util = "0.3.21"
percent-encoding = "2.1.0"
awc = { version = "3.0.0", features = ["rustls"] }
jsonwebtoken = "8.1.0"
thiserror = "1.0.31"
redis = "0.21.5"
mongodb = "2.2.1"
deadpool-redis = "0.10.2"
serde_json = "1.0.81"
once_cell = "1.12.0"
nanoid = "0.4.0"
regex = "1.5.6"
dashmap = "5.3.4"
data-url = "0.1.1"
sha2 = "0.10.2"
hex = "0.4.3"
base64 = "0.13"
bitflags = "1.3.2"

[build-dependencies]
regex = "1.5.6"
ureq = "2.4.0"

[features]
default = ["frontend"]
cors = ["dep:actix-cors"]
frontend = ["dep:rust-embed"]
